salesforce/force-app/main/default/objects/Contact/fields/Clientelling_Tier__c.field-meta.xml
<CustomField>
    <fullName>Clientelling_Tier__c</fullName>
    <label>Clientelling Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>VIP</fullName><default>false</default><label>VIP</label></value>
            <value><fullName>Lapsed</fullName><default>false</default><label>Lapsed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>