salesforce/force-app/main/default/objects/Contact/fields/Demo_Profile__c.field-meta.xml
<CustomField>
    <fullName>Demo_Profile__c</fullName>
    <label>Demo Profile</label>
    <type>Text</type>
    <length>50</length>
    <description>Categorizes contacts for demo purposes. Values: Seeded (rich history), Merkury (3P identity only), Created (registered during demo).</description>
</CustomField>