salesforce/force-app/main/default/objects/Contact/fields/Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the contact has opted in to receive marketing emails</description>
    <label>Email Opt-In</label>
    <type>Checkbox</type>
</CustomField>