salesforce/force-app/main/default/objects/Contact/fields/Last_Store_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Store_Visit__c</fullName>
    <label>Last Store Visit</label>
    <type>Date</type>
</CustomField>