salesforce/force-app/main/default/objects/Contact/fields/Merkury_HID__c.field-meta.xml
<CustomField>
    <fullName>Merkury_HID__c</fullName>
    <label>Merkury Household ID</label>
    <type>Text</type>
    <length>50</length>
    <externalId>true</externalId>
    <description>Merkury Household ID for household-level identity resolution. Multiple contacts may share the same HID if they belong to the same household.</description>
</CustomField>