salesforce/force-app/main/default/objects/Contact/fields/Merkury_Id__c.field-meta.xml
<CustomField>
    <fullName>Merkury_Id__c</fullName>
    <label>Merkury ID</label>
    <type>Text</type>
    <length>50</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <caseSensitive>true</caseSensitive>
    <description>Merkury identity graph ID for cross-device resolution.</description>
</CustomField>