salesforce/force-app/main/default/objects/Contact/fields/Preferred_Rep__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Preferred_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>