salesforce/force-app/main/default/objects/Contact/fields/Push_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Push_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the contact has opted in to receive push notifications</description>
    <label>Push Opt-In</label>
    <type>Checkbox</type>
</CustomField>