salesforce/force-app/main/default/objects/Contact/fields/Total_Store_Visits__c.field-meta.xml
<CustomField>
    <fullName>Total_Store_Visits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Store Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>